# doudizhu

./: .gitignore  LICENSE  README.md  requirements.txt
configs/: default.yaml
doudizhu/: CMakeLists.txt  build.sh
doudizhu/include/: cards.hpp  env.hpp  game.hpp
doudizhu/pybind/: bindings.cpp
doudizhu/python/: audit_rules.py  check_mapping.py  setup.py  test_debug.py  test_env.py  test_full.py  test_simple.py
doudizhu/python/doudizhu/: __init__.py  env_wrapper.py
doudizhu/src/: cards.cpp  env.cpp  game.cpp
scripts/: setup.sh  train.sh
tests/: test_buffer.py  test_config.py  test_eval.py  test_history_pool.py  test_model.py  test_obs_encoder.py  test_ppo.py  test_rollout.py
training/: buffer.py  config.py  eval.py  history_pool.py  model.py  obs_encoder.py  ppo.py  rollout.py  train.py  workers.py
